Add 'Show image preview' feature #620
Available in Menu->View->Show image preview .
It is possible to toggle the image preview with
CTRL+P keyboard combination.

--- a/src/locales/br.json
+++ b/src/locales/br.json
@@ -96,6 +96,7 @@
             "title": "Gwelout",
             "emoji": "Amdreiñ an destenn d'un emoji",
             "suggestemoji": "Erbediñ emoji en ur skrivañ",
+            "showimagepreview": "Show image preview",
             "hide_dock": "Kuzhat arlun an Dock",
             "fullscreen": "Lakaat/Tennañ ar mod skramm a-bezh",
             "tray": {
