--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -96,6 +96,7 @@
             "title": "גיסרא",
             "emoji": "המר טקסט לאימוג'י",
             "suggestemoji": "Suggest emoji on typing",
+            "showimagepreview": "Show image preview",
             "hide_dock": "הסתר סמל עגינה",
             "fullscreen": "מסך מלא",
             "tray": {
