--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -95,7 +95,8 @@
         "view": {
             "title": "Visualizza",
             "emoji": "Converti testo in emoji",
-            "suggestemoji": "Suggest emoji on typing",
+            "suggestemoji": "Suggerisci emoji mentre scrivi",
+            "showimagepreview": "Mostra anteprima immmagini",
             "hide_dock": "Nascondi l'icona della barra delle applicazioni",
             "fullscreen": "Schermo Intero",
             "tray": {
