--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -96,6 +96,7 @@
       "title": "Widok",
       "emoji": "Zamień tekst na emoji",
       "suggestemoji": "Suggest emoji on typing",
+      "showimagepreview": "Show image preview",
       "hide_dock": "Ukryj ikonę w Docku",
       "fullscreen": "Tryb Pełnoekranowy",
       "tray": {
