--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -96,6 +96,7 @@
       "title": "View",
       "emoji": "পাঠ্য ইমোজিতে রূপান্তর করুন",
       "suggestemoji": "Suggest emoji on typing",
+      "showimagepreview": "Show image preview",
       "hide_dock": "ডক আইকন লুকান",
       "fullscreen": "Toggle Fullscreen",
       "tray": {
