--- a/src/locales/pt_BR.json
+++ b/src/locales/pt_BR.json
@@ -96,6 +96,7 @@
             "title": "Ver",
             "emoji": "Converter texto para emoji",
             "suggestemoji": "Suggest emoji on typing",
+            "showimagepreview": "Show image preview",
             "hide_dock": "Esconder ícone do dock",
             "fullscreen": "Abrir em fullscreen",
             "tray": {
