forgot language in english

--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -28,7 +28,7 @@
 			"copy": "ప్రతిని చేయి",
 			"paste": "అతికించు",
 			"select_all": "అన్నింటినీ select చేయి",
-			"language": "భాష",
+			"language": "భాష (Language)",
 			"dateformat": "సిస్టం యొక్క తేదీ పద్ధతిని ఉపయోగించు",
 			"copy_link": "లింకును కాపీ చేయి",
 			"copy_image_link": "చిత్రం లింకును కాపీ చేయి"
