--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -41,7 +41,8 @@
         "search": "사용자 검색",
         "new_message": "새 메시지",
         "new_attachment": "New message received (image or video)",
-        "open_link": "Opening the link in the browser..."
+        "open_link": "Opening the link in the browser...",
+        "no_preview_image_click_to_open": "Image preview is disabled: click to open it in the browser"
     },
     "notification": {
         "one": "알림",
