--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -41,7 +41,8 @@
         "search": "மக்களை தேடு",
         "new_message": "புதிய செய்தியிடல்",
         "new_attachment": "New message received (image or video)",
-        "open_link": "Opening the link in the browser..."
+        "open_link": "Opening the link in the browser...",
+        "no_preview_image_click_to_open": "Image preview is disabled: click to open it in the browser"
     },
     "notification": {
         "one": "அறிவிப்பு",
