--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -41,7 +41,8 @@
     "search": "লোকেদের অনুসন্ধান করুন",
     "new_message": "নতুন বার্তা",
     "new_attachment": "New message received (image or video)",
-    "open_link": "Opening the link in the browser..."
+    "open_link": "Opening the link in the browser...",
+    "no_preview_image_click_to_open": "Image preview is disabled: click to open it in the browser"
   },
   "notification": {
     "one": "প্রজ্ঞাপন",
