--- a/src/locales/uk_UA.json
+++ b/src/locales/uk_UA.json
@@ -41,7 +41,8 @@
         "search": "Пошук людей",
         "new_message": "Нове повідомлення",
         "new_attachment": "Отримано нове повідомлення (картинка або відео)",
-        "open_link": "Відкриваю лінк в браузері..."
+        "open_link": "Відкриваю лінк в браузері...",
+        "no_preview_image_click_to_open": "Image preview is disabled: click to open it in the browser"
     },
     "notification": {
         "one": "Сповіщення",
