adds spellcheck that is default with electron 9

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -90,6 +90,7 @@
             "copy_image_link": "Copy Hiperligação da Imagem",
             "copy_link": "Copiar Hiperligação",
             "copy_image": "Copiar Imagem",
+            "save_image": "Salvar Imagem",
             "select_all": "Selecionar Todos",
             "language": "Idioma (Language)",
             "dateformat": "Use system date format"
